2004-08-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt: 
	* glib/tmpl/macros_misc.sgml: Document G_GNUC_INTERNAL.

2004-08-01 Matthias Clasen  <mclasen@redhat.com>
                                                                               
        * === Released 2.5.1 ===

2004-07-28  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/misc_utils.sgml: Clarify docs for 
	g_get_real_name().  (#143552, Danek Duvall)

Fri Jul 23 10:38:24 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/tmpl/limits.sgml: Fix docs for G_MAXSIZE.  (#148262, 
	Christophe Fergeau)

Sun Jul 18 18:03:08 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* === Released 2.5.0 ===

2004-07-09  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/arrays.sgml: Improve g_array_free() docs.  (#146875,
	Ed Griffiths)

Tue Jul  6 00:54:38 2004  Matthias Clasen  <maclas@gmx.de>

	* gobject/gobject-sections.txt: 
	* gobject/tmpl/gtypemodule.sgml: Add g_type_module_register_enum()
	and g_type_module_register_flags().

Mon Jul  5 18:49:56 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/tmpl/messages.sgml: 
	* glib/glib-sections.txt: Add g_debug.

2004-06-15  Federico Mena Quintero  <federico@ximian.com>

	* glib/tmpl/conversions.sgml: New section on file name encodings.

	* glib/file-name-encodings.sxd: New diagram of how file name
	encodings work.

	* glib/file-name-encodings.png: Same as above, for inclusion in
	the generated docs.

	* glib/Makefile.am (HTML_IMAGES): Add file-name-encodings.png.
	(EXTRA_DIST): Add the new images.

	* glib/running.sgml: Add ids to the corresponding paragraphs that
	describe G_FILENAME_ENCODING and G_BROKEN_FILENAMES, to be able to
	reference them from elsewhere.

Thu Jun 10 21:29:55 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/tmpl/modules.sgml: Add an example for GModule
	usage.  (#144127, Tommi Komulainen)

Sun Jun  6 23:20:42 2004  Matthias Clasen  <maclas@gmx.de>

	* gobject/tmpl/gtype.sgml: Fix the docs for G_DEFINE_TYPE()